@@ -40,8 +40,8 @@ if (!$gallery) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.3.5-cvs-b103";
-$gallery->config_version = 40;
+$gallery->version = "1.3.5-cvs-b104";
+$gallery->config_version = 41;
 $gallery->album_version = 13;
 $gallery->remote_protocol_version = 1;
 $gallery->url = "http://gallery.sourceforge.net";
