@@ -1,3 +1,11 @@
+2003-08-08  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b104
+
+	* Fixed several small problems in the config wizard and util.php that 
+	  would generate PHP warnings.
+
+	* Added aliases for Portuguese (pt_PT) and Chinese (zh_TW) as they
+	  appear in FreeBSD
+
 2003-08-08  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b103
 
 	* fixed bug which caused gallery not shown in chinese in *NUKE
